Fixed broken links on About page

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,7 +11,7 @@
   <body>
     <div class="main-content">
       {{>header}}
-      <p>This site was created by John Gales. It uses data from <a href="mapbox.com">mapbox.com</a> and <a href="weatherstock.com">weatherstock.com</a>.</p>
+      <p>This site was created by John Gales. It uses data from <a href="https://www.mapbox.com/">mapbox.com</a> and <a href="https://weatherstack.com/">weatherstock.com</a>.</p>
     <img class="portrait" src="/img/me.jpg" alt="John" />
     </div>
     
